# azure-pipeline-test

./: CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  cppfs-test.cpp
.azure-templates/: cmake-steps.yml  sclrun
cmake/: cppfs-try-run.cpp
